facet-python/src/snapshots/facet_python__tests__hashmap_with_integer_keys.snap
---
source: facet-python/src/lib.rs
expression: py
---
class IntKeyedMap(TypedDict, total=False):
    counts: Required[dict[int, str]]
