facet-python/src/snapshots/facet_python__tests__internally_tagged_newtype_primitive_variant.snap
---
source: facet-python/src/lib.rs
assertion_line: 2269
expression: py
---
type Event = EventCount

class EventCount(TypedDict, total=False):
    type: Required[Literal["Count"]]
    value: Required[int]
