facet-python/src/snapshots/facet_python__tests__internally_tagged_newtype_struct_variant.snap
---
source: facet-python/src/lib.rs
assertion_line: 2171
expression: py
---
class IrsData(TypedDict, total=False):
    pay_rate: Required[float]
    receive_rate: Required[float]

type Product = ProductIrs | ProductFixed

class ProductFixed(TypedDict, total=False):
    type: Required[Literal["Fixed"]]
    rate: Required[float]

class ProductIrs(TypedDict, total=False):
    type: Required[Literal["Irs"]]
    pay_rate: Required[float]
    receive_rate: Required[float]
