facet-python/src/snapshots/facet_python__tests__mixed_enum_variants.snap
---
source: facet-python/src/lib.rs
assertion_line: 840
expression: py
---
class Data(TypedDict, total=False):
    Data: Required["DataData"]

class DataData(TypedDict, total=False):
    name: Required[str]
    value: Required[float]

type Event = Literal["Empty"] | "Id" | "Data"

class Id(TypedDict, total=False):
    Id: Required[int]
