facet-python/src/snapshots/facet_python__tests__optional_field.snap
---
source: facet-python/src/lib.rs
expression: py
---
class Config(TypedDict, total=False):
    required: Required[str]
    optional: str
