facet-python/src/snapshots/facet_python__tests__proxy_preserves_doc_comment.snap
---
source: facet-python/src/lib.rs
expression: py
---
# A 2-D point (internal representation).
class Point(TypedDict, total=False):
    x: Required[float]
    y: Required[float]
