facet-python/src/snapshots/facet_python__tests__proxy_struct.snap
---
source: facet-python/src/lib.rs
assertion_line: 2428
expression: py
---
class InternalPoint(TypedDict, total=False):
    x: Required[float]
    y: Required[float]
