facet-python/src/snapshots/facet_python__tests__simple_enum.snap
---
source: facet-python/src/lib.rs
expression: py
---
Status = Union[Literal["Active"], Literal["Inactive"], Literal["Pending"]]
