facet-python/src/snapshots/facet_python__tests__simple_struct.snap
---
source: facet-python/src/lib.rs
expression: py
---
class User(TypedDict, total=False):
    name: Required[str]
    age: Required[int]
